--- a/index.html
+++ b/index.html
@@ -97,29 +97,29 @@
                     this.config[key] = value;
                     localStorage.getItem(PLAYER_STORAGE_KEY, this.config);
                 },
-                name: "Em nên dừng lại",
-                singer: "ca si",
-                path: "./assets/music/em-nen-dung-lai.mp3",
+                name: "Đám cưới miền tây",
+                singer: "HANA CẨM TIÊN",
+                path: "./assets/music/dam-cuoi-mien-tay.mp3",
                 image: "./assets/img/em-my-1.jpg",
             }, {
                 name: "Tấm long son remix",
-                singer: "ca si",
+                singer: "H-Kray x Đại Mèo Remix",
                 path: "./assets/music/tam-long-son.mp3",
                 image: "./assets/img/em-my-2.jpg",
             }, , {
                 name: "Chỉ Bằng Cái Gật Đầu",
-                singer: "ca si",
+                singer: "Yan Nguyễn",
                 path: "./assets/music/chi-bang-cai-gat-dau.mp3",
                 image: "./assets/img/em-my-3.jpg",
             }, , {
-                name: "Đổi tinh đổi áo",
-                singer: "ca si",
-                path: "./assets/music/doi-tinh-doi-ao.mp3",
+                name: "Tòng Phu",
+                singer: "KEYO",
+                path: "./assets/music/tong-phu.mp3",
                 image: "./assets/img/em-my-4.jpg",
             }, , {
-                name: "Có duyên không nợ",
-                singer: "ca si",
-                path: "./assets/music/co-duyen-khong-no.mp3",
+                name: "Hoa Điêu Thuyền",
+                singer: "Yamix Hầu Ca",
+                path: "./assets/music/hoa-dieu-thuyen.mp3",
                 image: "./assets/img/em-my-1.jpg",
             }, ],
             // <div class="song }>
